force-app/main/default/objects/genesis__Checklist__c/fields/genesis__Description__c.field-meta.xml
<CustomField>
    <fullName>genesis__Description__c</fullName>
    <description>This field maintains all the history information related to the rule and criteria&apos;s evaluated on the object</description>
    <inlineHelpText>This field maintains all the history information related to the rule and criteria&apos;s evaluated on the object</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>