force-app/main/default/objects/genesis__Checklist__c/fields/genesis__Message__c.field-meta.xml
<CustomField>
    <fullName>genesis__Message__c</fullName>
    <label>Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>