force-app/main/default/objects/genesis__Checklist__c/fields/genesis__Result__c.field-meta.xml
<CustomField>
    <fullName>genesis__Result__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures the final result of the rule evaluated in the form of true/false corresponding to Pass/Fail.</description>
    <inlineHelpText>This field captures the final result of the evaluated rule. If ticked then Pass else Fail</inlineHelpText>
    <label>Result</label>
    <type>Checkbox</type>
</CustomField>