force-app/main/default/objects/genesis__Checklist__c/fields/genesis__Rule__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>genesis__Rule__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>