force-app/main/default/objects/genesis__Checklist__c/listViews/genesis__All.listView-meta.xml
<ListView>
    <fullName>genesis__All</fullName>
    <columns>NAME</columns>
    <columns>genesis__Application__c</columns>
    <columns>genesis__Rule__c</columns>
    <columns>genesis__Rule_Criteria__c</columns>
    <columns>genesis__Message__c</columns>
    <columns>genesis__Result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>genesis__Application__c</field>
        <operation>equals</operation>
        <value>APP-0001715339</value>
    </filters>
    <label>All</label>
</ListView>